rework the spawner logic

--- a/MoreNPC/spawn_that.world_spawners.random.cfg
+++ b/MoreNPC/spawn_that.world_spawners.random.cfg
@@ -1,292 +1,305 @@
-# Neutral 101-110
+# Neutral 101-120
 
 [WorldSpawner.101]
 PrefabName=RRRN_frida
 Enabled=True
+Biomes=Meadows,BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=2
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
+LevelUpMinCenterDistance=2000
 SetFaction=Players
 SetTamed=False
+MaxSpawned=1
 SpawnChance=20
-SpawnInterval=1000
+SpawnInterval=600
 
 [WorldSpawner.102]
 PrefabName=RRRN_helga
 Enabled=True
+Biomes=BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
-LevelMax=2
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
+LevelMax=3
+LevelUpMinCenterDistance=2000
 SetFaction=Players
 SetTamed=False
+MaxSpawned=1
 SpawnChance=10
-SpawnInterval=1000
+SpawnInterval=600
 
 [WorldSpawner.103]
 PrefabName=RRRN_liv
 Enabled=True
+Biomes=Swamp,Mountain,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=3
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
+LevelUpMinCenterDistance=8000
 SetFaction=Players
 SetTamed=False
-SpawnChance=10
-SpawnInterval=1000
+MaxSpawned=1
+SpawnChance=5
+SpawnInterval=600
 
 [WorldSpawner.104]
 PrefabName=RRRN_frode
 Enabled=True
+Biomes=Meadows,BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=2
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
+LevelUpMinCenterDistance=2000
 SetFaction=Players
 SetTamed=False
+MaxSpawned=1
 SpawnChance=30
-SpawnInterval=1000
+SpawnInterval=600
 
 [WorldSpawner.105]
 PrefabName=RRRN_erik
 Enabled=True
+Biomes=BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
-LevelMax=2
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
+LevelMax=3
+LevelUpMinCenterDistance=2000
 SetFaction=Players
 SetTamed=False
+MaxSpawned=1
 SpawnChance=20
-SpawnInterval=1000
+SpawnInterval=600
 
 [WorldSpawner.106]
 PrefabName=RRRN_harald
 Enabled=True
+Biomes=BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=3
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
+LevelUpMinCenterDistance=8000
 SetFaction=Players
 SetTamed=False
+MaxSpawned=1
 SpawnChance=10
-SpawnInterval=1000
+SpawnInterval=600
 
-# Friendly 111-149
+# Friendly 121-149
 
 [WorldSpawner.111]
-PrefabName=RRRN_frode_friendly
+PrefabName=RRRN_frida_friendly
 Enabled=True
+Biomes=Meadows,BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=2
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
+LevelUpMinCenterDistance=2000
 SetFaction=Players
 SetTamed=True
+MaxSpawned=1
 SpawnChance=10
-SpawnInterval=1000
+SpawnInterval=600
 
 [WorldSpawner.112]
-PrefabName=RRRN_erik_friendly
+PrefabName=RRRN_helga_friendly
 Enabled=True
-SpawnAtDay=True
-SpawnAtNight=True
-LevelMin=1
-LevelMax=2
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
-SetFaction=Players
-SetTamed=True
-SpawnChance=5
-SpawnInterval=1000
-
-[WorldSpawner.112]
-PrefabName=RRRN_harald_friendly
-Enabled=True
+Biomes=BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=3
-LevelUpChance=10
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SpawnInPlayerBase=True
-SetPatrolPoint=True
+LevelUpMinCenterDistance=2000
 SetFaction=Players
 SetTamed=True
+MaxSpawned=1
 SpawnChance=5
-SpawnInterval=500
+SpawnInterval=600
 
-# HuntPlayer=true 150++
-
-[WorldSpawner.149]
-PrefabName=RRRN_hostile_looter
+[WorldSpawner.113]
+PrefabName=RRRN_liv_friendly
 Enabled=True
+Biomes=Swamp,Mountain,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
-LevelMax=4
-LevelUpChance=3
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SetPatrolPoint=True
-HuntPlayer=true
-SpawnChance=30
-MaxSpawned=5
-SpawnInterval=300
+LevelMax=3
+LevelUpMinCenterDistance=8000
+SetFaction=Players
+SetTamed=True
+MaxSpawned=1
+SpawnChance=3
+SpawnInterval=600
 
-[WorldSpawner.150]
-PrefabName=RRRN_bandit_hostile
+[WorldSpawner.114]
+PrefabName=RRRN_frode_friendly
 Enabled=True
+Biomes=Meadows,BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
-LevelMax=4
-LevelUpChance=3
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SetPatrolPoint=True
-HuntPlayer=true
-SpawnChance=20
-MaxSpawned=3
-SpawnInterval=300
+LevelMax=2
+LevelUpMinCenterDistance=2000
+SetFaction=Players
+SetTamed=True
+MaxSpawned=1
+SpawnChance=15
+SpawnInterval=600
+
+[WorldSpawner.115]
+PrefabName=RRRN_erik_friendly
+Enabled=True
+Biomes=BlackForest,Swamp,Plains
+SpawnAtDay=True
+SpawnAtNight=True
+LevelMin=1
+LevelMax=3
+LevelUpMinCenterDistance=2000
+SetFaction=Players
+SetTamed=True
+MaxSpawned=1
+SpawnChance=10
+SpawnInterval=600
+
+[WorldSpawner.116]
+PrefabName=RRRN_harald_friendly
+Enabled=True
+Biomes=BlackForest,Swamp,Plains
+SpawnAtDay=True
+SpawnAtNight=True
+LevelMin=1
+LevelMax=3
+LevelUpMinCenterDistance=8000
+SetFaction=Players
+SetTamed=True
+MaxSpawned=1
+SpawnChance=5
+SpawnInterval=600
+
+# Hostile Heroes 151-199
 
 [WorldSpawner.151]
 PrefabName=RRRN_frida_hostile
 Enabled=True
+Biomes=Meadows,BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
-LevelMax=3
-LevelUpChance=3
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SetPatrolPoint=True
-SpawnChance=10
-SpawnInterval=1000
+LevelMax=2
+LevelUpMinCenterDistance=2000
+SetFaction=Players
+SetTamed=False
+MaxSpawned=1
+SpawnChance=5
+SpawnInterval=600
 
 [WorldSpawner.152]
 PrefabName=RRRN_helga_hostile
 Enabled=True
+Biomes=BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=3
-LevelUpChance=3
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SetPatrolPoint=True
-SpawnChance=5
-SpawnInterval=1000
+LevelUpMinCenterDistance=2000
+SetFaction=Players
+SetTamed=False
+MaxSpawned=1
+SpawnChance=3
+SpawnInterval=600
 
 [WorldSpawner.153]
 PrefabName=RRRN_liv_hostile
 Enabled=True
+Biomes=Swamp,Mountain,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=3
-LevelUpChance=3
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SetPatrolPoint=True
-SpawnChance=5
-SpawnInterval=1000
+LevelUpMinCenterDistance=8000
+SetFaction=Players
+SetTamed=False
+MaxSpawned=1
+SpawnChance=1
+SpawnInterval=600
 
 [WorldSpawner.154]
 PrefabName=RRRN_frode_hostile
 Enabled=True
+Biomes=Meadows,BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
-LevelMax=3
-LevelUpChance=3
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SetPatrolPoint=True
-SpawnChance=10
-SpawnInterval=1000
-
-[WorldSpawner.155]
-PrefabName=RRRN_erik_hostile
-Enabled=True
-SpawnAtDay=True
-SpawnAtNight=True
-LevelMin=1
-LevelMax=3
-LevelUpChance=3
-RespawnTime=1
-TriggerDistance=60  
-TriggerNoise=0
-SetPatrolPoint=True
+LevelMax=2
+LevelUpMinCenterDistance=2000
+SetFaction=Players
+SetTamed=False
+MaxSpawned=1
 SpawnChance=5
-SpawnInterval=1000
+SpawnInterval=600
 
-[WorldSpawner.156]
-PrefabName=RRRN_harald_hostile
+[WorldSpawner.115]
+PrefabName=RRRN_erik_friendly
 Enabled=True
+Biomes=BlackForest,Swamp,Plains
 SpawnAtDay=True
 SpawnAtNight=True
 LevelMin=1
 LevelMax=3
-LevelUpChance=3
-RespawnTime=1
-TriggerDistance=60
-TriggerNoise=0
-SetPatrolPoint=True
-SpawnChance=5
-SpawnInterval=1000
+LevelUpMinCenterDistance=2000
+SetFaction=Players
+SetTamed=False
+MaxSpawned=1
+SpawnChance=3
+SpawnInterval=600
 
+[WorldSpawner.116]
+PrefabName=RRRN_harald_friendly
+Enabled=True
+Biomes=BlackForest,Swamp,Plains
+SpawnAtDay=True
+SpawnAtNight=True
+LevelMin=1
+LevelMax=3
+LevelUpMinCenterDistance=8000
+SetFaction=Players
+SetTamed=False
+MaxSpawned=1
+SpawnChance=1
+SpawnInterval=600
+
+# Hostile General 200+
+
+[WorldSpawner.201]
+PrefabName=RRRN_hostile_looter
+Enabled=True
+Biomes=Meadows,BlackForest,Plains
+SpawnAtDay=True
+SpawnAtNight=True
+LevelMin=1
+LevelMax=1
+LevelUpMinCenterDistance=4000
+HuntPlayer=true
+MaxSpawned=4
+SpawnChance=30
+SpawnInterval=600
+
+[WorldSpawner.202]
+PrefabName=RRRN_hostile_bandit
+Enabled=True
+Biomes=BlackForest,Plains
+SpawnAtDay=True
+SpawnAtNight=True
+LevelMin=1
+LevelMax=2
+LevelUpMinCenterDistance=4000
+HuntPlayer=true
+MaxSpawned=4
+SpawnChance=30
+SpawnInterval=600
